# proa

./: .dockerignore  .gitignore  Cargo.toml  LICENSE.txt  README.md  RELEASING.md  example.yaml  flake.nix  rust-toolchain.toml  skaffold.yaml
.github/: CODEOWNERS
.github/workflows/: release.yaml  rust-ci.yaml
examples/: Dockerfile  job.yaml
skaffold/: Dockerfile  deployment.yaml  kustomization.yaml  sidecar.py
src/: config.rs  exec.rs  k8s.rs  main.rs  shutdown.rs
src/stream/: holistic_stream_ext.rs  holistic_timeout.rs  mod.rs
