[package]
name = "proa"
version = "0.1.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
edition = "2021"
description = "Manage Kubernetes sidecar container lifecycle."
repository = "https://github.com/IronCoreLabs/proa"
license = "MIT"
keywords = ["kubernetes", "sidecar"]
categories = ["virtualization"]

[features]
kill = ["dep:sysinfo", "dep:nix"]

# TODO Clean up dependency versions.
[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
futures = "0.3.28"
gethostname = "0.4.2"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["client", "runtime"] }
nix = { version = "0.26.2", optional = true }
pin-project = "1.1.0"
reqwest = "0.11.18"
sysinfo = { version = "0.29.0", optional = true }
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
json = "0.12.4"
serde_json = "1.0.96"
