[package]
name = "proa"
version = "0.1.1"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
edition = "2021"
description = "Manage Kubernetes sidecar container lifecycle."
repository = "https://github.com/IronCoreLabs/proa"
license = "MIT"
keywords = ["kubernetes", "sidecar"]
categories = ["virtualization"]

[features]
kill = ["dep:sysinfo", "dep:nix"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["cargo", "derive"] }
futures = "0.3"
gethostname = "0.4"
k8s-openapi = { version = "0.18", features = ["v1_26"] }
kube = { version = "0.82", features = ["client", "runtime"] }
nix = { version = "0.26", optional = true }
pin-project = "1.1"
reqwest = "0.11"
sysinfo = { version = "0.29", optional = true }
tokio = { version = "1.28", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
json = "0.12"
serde_json = "1.0"
