[package]
name = "proa"
version = "0.1.3"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
edition = "2024"
description = "Manage Kubernetes sidecar container lifecycle."
repository = "https://github.com/IronCoreLabs/proa"
license = "MIT"
keywords = ["kubernetes", "sidecar"]
categories = ["virtualization"]

[features]
kill = ["dep:sysinfo", "dep:nix"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["cargo", "derive"] }
futures = "0.3"
gethostname = "1"
k8s-openapi = { version = "0.24", features = ["v1_30"] }
kube = { version = "0.99", features = ["client", "runtime"] }
nix = { version = "0.29", optional = true, features = ["signal"] }
pin-project = "1.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
sysinfo = { version = "0.34", optional = true }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
json = "0.12"
serde_json = "1.0"
